bin/testsuite/tests/compiler/src/errors/compiler5007.swg
#global testerror "Err0623"

#test
{
    var ptr = @dataof(0)
}
